--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ a:hover {
 
 #name {
   font-family: 'Marck Script', cursive;
-  color: #272727;
+  color: #00bcd4;
   font-size: 625%;
   margin: 75px auto 0 auto;
 }
@@ -96,7 +96,7 @@ a:hover {
 }
 
 .top-container {
-  background-color: #005691;
+  background-color: #b2ebf2;
   padding-top: 220px;
 }
 
