--- a/css/styles.css
+++ b/css/styles.css
@@ -142,8 +142,8 @@ a:hover {
 
 .top-cloud {
   position: absolute;
-  top: 100px;
-  right: 200px;
+  top: 5rem;
+  right: 10rem;
 }
 
 .mountain {
@@ -152,7 +152,7 @@ a:hover {
 
 .bottom-cloud {
   position: absolute;
-  left: 200px;
+  left: 10rem;
 }
 
 .contact-me {
